# qubership-pipelines-cli-command-samples

./: .gitignore  Dockerfile  README.md  build_pyz_local.sh  pyproject.toml
.github/scripts/: build_pyz.sh  debug_script.sh  reduce_botocore.sh  run_tests.sh
.github/workflows/: build-and-release-alpine-version.yml  build-and-release.yml  run-tests-only.yml
docs/: development.md  minio.md
src/qubership_cli_samples/: __init__.py  __main__.py  minio_commands.py  sample_command.py
src/qubership_cli_samples/debug/: debug_command.py  system_load_commands.py  validate_dependencies_command.py
src/qubership_cli_samples/file_processing/: file_commands.py
src/qubership_cli_samples/github/: github_command.py
src/qubership_cli_samples/podman/: podman_command.md  podman_command.py
src/qubership_cli_samples/report/: default_report_template.html  report_command.py
src/qubership_cli_samples/umbrella_test/: umbrella_command.py
tests/: run_test_suite.py
tests/cli/: test_cli_commands.py
tests/data/: context.yaml  context2.yaml  params.yaml
tests/data/minio/: context.yaml  params.yaml
